# victus-control-15-fb1xxx

backend/src/: fan.cpp  fan.hpp  main.cpp  set-fan-mode.sh
frontend/: meson.build
frontend/src/: fan.cpp  fan.hpp  keyboard.cpp  keyboard.hpp  main.cpp  main.hpp
